[workspace]
resolver = "2"
members = ["crates/*"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[workspace.dependencies]
glam = "0.27"
winit = "0.29"
wgpu = "0.19"
rapier3d = "0.18"
kira = "0.8"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
smallvec = "1.11"
crossbeam-queue = "0.3"
image = "0.24"
gltf = "1.4"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
